# bgf

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
lib/: CMakeLists.txt
lib/include/bave/: async_exec.hpp  game_driver.hpp  resource_map.hpp  scene.hpp  string_map.hpp  vector_space.hpp
lib/include/bave/assets/: asset_list.hpp  asset_loader.hpp  asset_manifest.hpp
lib/include/bave/services/: audio.hpp  display.hpp  gamepad_provider.hpp  resources.hpp  scene_switcher.hpp  service.hpp  services.hpp  styles.hpp
lib/include/bave/ui/: button.hpp  button_tile.hpp  dialog.hpp  element.hpp  list_box.hpp  loading_screen.hpp  outline_quad.hpp  progress_bar.hpp  slider.hpp  sprite.hpp  style.hpp  text.hpp  view.hpp  widget.hpp
lib/src/: async_exec.cpp  game_driver.cpp  scene.cpp  vector_space.cpp
lib/src/assets/: asset_list.cpp  asset_loader.cpp  asset_manifest.cpp
lib/src/services/: audio.cpp  styles.cpp  temp.cpp
lib/src/ui/: button.cpp  button_tile.cpp  dialog.cpp  loading_screen.cpp  outline_quad.cpp  progress_bar.cpp  slider.cpp  text.cpp  view.cpp
